fixed button spacing at bottom of page

--- a/css/style.css
+++ b/css/style.css
@@ -677,6 +677,11 @@ input:checked + .slider:before {
     border-right: 1px solid lightgrey;
 }
 
+.button-set-primary,
+.button-set-disabled {
+    margin-top: 28px;
+}
+
 }
 
 
